<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/toolbar_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@color/toolbar"
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/me_fragment_photo"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/login"
                android:layout_marginTop="30dp"
                android:layout_width="100dp"
                android:layout_height="100dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/me_onemessage"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:text="@string/用户名"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/message_username_tv"

                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:background="@mipmap/item_go_two"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/me_meshop"
            android:background="#ffffff"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:text="@string/昵称"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/message_nichenname_tv"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:background="@mipmap/item_go_two"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/message_uploadshop"
            android:background="#ffffff"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:text="@string/环信ID"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/message_nameID_tv"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:background="@mipmap/item_go_two"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />
        </RelativeLayout>
    </LinearLayout>
   <TextView
       android:id="@+id/message_return_tv"
       android:text="@string/退出当前登录"
       android:gravity="center"
       android:textSize="25sp"
       android:textColor="@color/toolbar_text"
       android:background="@color/toolbar"
       android:layout_alignParentBottom="true"
       android:layout_width="match_parent"
       android:layout_height="50dp"/>
</RelativeLayout>