<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#dcdada"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/toolbar"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/me_fragment_photo"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/login"
            android:layout_marginTop="30dp"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:id="@+id/me_fragment_name"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/me_onemessage"
        android:background="#ffffff"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/个人信息"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:background="@mipmap/item_go_two"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/me_meshop"
        android:background="#ffffff"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:background="@mipmap/item_go_two"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/我的商品"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/me_uploadshop"
        android:background="#ffffff"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:background="@mipmap/item_go_two"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/上传商品"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>