<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#d1cfcf"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:background="@color/toolbar"
            android:id="@+id/login_toolbar"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="60dp">

        </android.support.v7.widget.Toolbar>
        <LinearLayout

            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="250dp">
            <LinearLayout
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:background="@color/toolbar_text"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:id="@+id/login_username_im"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
                <EditText
                    android:id="@+id/login_username_et"
                    android:layout_gravity="center_vertical"
                    android:background="@color/toolbar_text"
                    android:hint="@string/用户名"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:background="@color/toolbar_text"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:id="@+id/login_password_im"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/login_password_et"
                    android:layout_gravity="center_vertical"
                    android:background="@color/toolbar_text"
                    android:hint="@string/密码"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/login_gone_ll"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:background="@color/toolbar_text"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:id="@+id/login_newpassword_im"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/login_newpassword_et"
                    android:layout_gravity="center_vertical"
                    android:background="@color/toolbar_text"
                    android:hint="@string/确认密码"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:background="@color/toolbar_gray"
            android:id="@+id/login_button"
            android:textColor="@color/toolbar_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/login_reg_tv"
            android:text="@string/快速注册"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:textColor="@color/toolbar"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/login_gone_pb"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="70dp"
            android:layout_height="70dp" />
    </RelativeLayout>
</RelativeLayout>