<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/detail_delete"
        android:text="@string/删除"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:textColor="@color/toolbar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.v4.view.ViewPager
        android:id="@+id/detail_viewpager"
        android:layout_below="@id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="300dp">

    </android.support.v4.view.ViewPager>
    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/indicator"
        android:layout_marginBottom="10dp"
        android:layout_alignBottom="@id/detail_viewpager"
        app:ci_drawable="@drawable/circle_indicator"
        android:layout_width="match_parent"
        android:layout_height="15dp">

    </me.relex.circleindicator.CircleIndicator>
    <RelativeLayout
        android:layout_below="@id/detail_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/detail_name"
            android:textSize="25sp"

            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_price"
            android:textSize="20sp"
            android:textColor="@color/toolbar"
            android:layout_below="@id/detail_name"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_people"
            android:textSize="20sp"
            android:textColor="@color/toolbar_yellow"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_below="@id/detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_below="@id/detail_people"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/detai_gone"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/detail_send_message"
            android:text="@string/发消息"
            android:textSize="20sp"
            android:textColor="@color/toolbar_text"
            android:background="@color/toolbar_yellow"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_weight="0.01"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/detail_Contact_her"
            android:textSize="20sp"
            android:text="@string/联系他"
            android:textColor="@color/toolbar_text"
            android:background="@color/toolbar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>